--- a/index.html
+++ b/index.html
@@ -894,7 +894,7 @@
                     <img src="https://tr.rbxcdn.com/180DAY-9e5cdba492d7c44e22de3beee360b5c4/150/150/Image/Webp/noFilter" alt="Tishina Games Logo">
                     <h3>Tishina Games</h3>
                 </div>
-                <p class="copyright">© 2023 Tishina Games. Все права защищены.</p>
+                <p class="copyright">© Tishina Games.</p>
             </div>
         </div>
     </footer>
